# Multi-Agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  alembic.ini  cache.md  docker-compose.yml  pyproject.toml
.claude/skills/: VENDORED.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py
config/: guardrails.yaml  litellm_config.yaml
config/prompts/: architect_system.md  coder_system.md  reviewer_system.md  security_system.md  test_generator_system.md
docker/: Dockerfile.dart  Dockerfile.node  Dockerfile.security
docs/: 01_hybrid_architecture_analysis.md  02_implementation_plan.md  03_roadmap.md  04_sprint_plan.md  05_expansion_vision.md  06_gortex_vendoring_plan.md
docs/superpowers/specs/: 2026-06-21-s8-dashboard-design.md
src/: __init__.py  __main__.py
src/agents/: __init__.py  base.py
src/agents/architect/: __init__.py  agent.py  schemas.py  tools.py
src/api/: __init__.py  main.py
src/core/: config.py  logging.py
src/db/: __init__.py  models.py  session.py
src/integrations/: __init__.py  docker_runner.py  github_client.py  litellm_chat_model.py  litellm_client.py
src/observability/: __init__.py  langsmith_tracer.py  metrics.py
src/orchestrator/: __init__.py  edges.py  graph.py  guardrails.py  hitl.py  nodes.py  state.py
tests/: conftest.py  test_api.py  test_architect.py  test_checkpoint_postgres.py  test_cli.py  test_coder.py  test_docker_runner.py  test_github_client.py  test_guardrails.py  test_hitl.py  test_inner_loop.py  test_langsmith_tracer.py  test_litellm_chat_model.py  test_litellm_client.py  test_metrics.py  test_orchestrator.py  test_reviewer.py  test_security.py  test_state.py  test_test_generator.py
(+18 files in other folders)
