[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-mobile-dev"
version = "0.1.0"
description = "Multi-Agent Autonomous Mobile Application Development System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Furkan", email = "furkan@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "langgraph>=1.0.10",
    "langgraph-checkpoint-postgres>=2.0.0",
    "litellm>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "structlog>=23.1.0",
    "rich>=13.4.0",
    "psycopg[pool]>=3.1.9",
    "langsmith>=0.2.0",
    "langchain-core>=0.3.0",
    "pygithub>=1.59.0",
    "docker>=6.1.3",
    "prometheus-client>=0.17.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "mypy>=1.3.0",
    "ruff>=0.0.272",
    "types-pyyaml>=6.0.12.9",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: tests requiring live infrastructure (PostgreSQL/Docker); auto-skip when unavailable",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "B", "A", "C4"]
ignore = []
exclude = ["venv", ".venv", "build", "dist"]
